fix account top image in dark mode

--- a/src/styles/adaptedStyles/pages/accountSettingsPage.scss
+++ b/src/styles/adaptedStyles/pages/accountSettingsPage.scss
@@ -8,7 +8,6 @@
 
   // #region dark mode adaption part
   &.dark {
-    .top-img,
     .top_bg {
       filter: invert(1) hue-rotate(180deg);
     }
